--- a/drupal/sites/default/themes/dgd7theme/css/style.css
+++ b/drupal/sites/default/themes/dgd7theme/css/style.css
@@ -445,7 +445,7 @@ h1#page-title,
   line-height: 1.4em;
 }
 #block-system-main .node-teaser h2 a {
-  color: #181818;
+  color: #FFE373;
 }
 #block-system-main .node-teaser {
   border-bottom: 1px solid #d3d7d9;
